--- a/dvach-browser/Base.lproj/Main.storyboard
+++ b/dvach-browser/Base.lproj/Main.storyboard
@@ -167,7 +167,7 @@
                                         <constraint firstItem="udf-rB-IcA" firstAttribute="top" secondItem="vxw-Jc-Fk2" secondAttribute="top" constant="10" id="YX7-8C-adV"/>
                                         <constraint firstAttribute="trailing" secondItem="ggV-qV-ALA" secondAttribute="trailing" constant="10" id="ZNC-5y-9iz"/>
                                         <constraint firstItem="udf-rB-IcA" firstAttribute="leading" secondItem="vxw-Jc-Fk2" secondAttribute="leading" constant="10" id="Zyk-3H-Nwn"/>
-                                        <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="udf-rB-IcA" secondAttribute="bottom" constant="10" id="aXM-u5-MFg"/>
+                                        <constraint firstAttribute="bottom" secondItem="udf-rB-IcA" secondAttribute="bottom" constant="10" id="aXM-u5-MFg"/>
                                         <constraint firstItem="zj3-lK-H6n" firstAttribute="top" secondItem="ggV-qV-ALA" secondAttribute="bottom" constant="4" id="jqp-G5-S8f"/>
                                         <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="zj3-lK-H6n" secondAttribute="bottom" constant="10" id="w0K-ku-Uky"/>
                                     </constraints>
@@ -1077,8 +1077,8 @@
         <image name="Video" width="30" height="30"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="XRT-4w-L0S"/>
         <segue reference="Iwy-TH-KYT"/>
-        <segue reference="o55-Sb-BOJ"/>
+        <segue reference="XRT-4w-L0S"/>
+        <segue reference="Xk9-pa-bWO"/>
     </inferredMetricsTieBreakers>
 </document>
