--- a/dvach-browser/Base.lproj/Main.storyboard
+++ b/dvach-browser/Base.lproj/Main.storyboard
@@ -618,11 +618,6 @@
                         </connections>
                     </tableView>
                     <toolbarItems>
-                        <barButtonItem image="Bottompage" id="lMc-P3-Z0E">
-                            <connections>
-                                <action selector="scrollToBottom:" destination="3hz-5v-Niv" id="asC-QQ-psR"/>
-                            </connections>
-                        </barButtonItem>
                         <barButtonItem style="plain" systemItem="flexibleSpace" id="EJM-0B-k22"/>
                         <barButtonItem systemItem="refresh" id="OC5-6d-88W">
                             <connections>
@@ -662,7 +657,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="550"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ekp-o7-QBh">
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" bounces="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ekp-o7-QBh">
                                 <rect key="frame" x="0.0" y="20" width="320" height="530"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RLY-YJ-MBR" userLabel="Container For Post Elements" customClass="DVBContainerForPostElements">
@@ -1071,14 +1066,13 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Bottompage" width="22" height="22"/>
         <image name="Refresh" width="44" height="44"/>
         <image name="Settings" width="22" height="22"/>
         <image name="Video" width="30" height="30"/>
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="Iwy-TH-KYT"/>
-        <segue reference="XRT-4w-L0S"/>
+        <segue reference="yeg-8I-aPr"/>
         <segue reference="Xk9-pa-bWO"/>
     </inferredMetricsTieBreakers>
 </document>
