Thumbnails now smaller for iPad.

--- a/dvach-browser/Base.lproj/Main.storyboard
+++ b/dvach-browser/Base.lproj/Main.storyboard
@@ -133,8 +133,8 @@
                                             <rect key="frame" x="10" y="10" width="65" height="65"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="65" id="TYI-DK-cMv"/>
-                                                <constraint firstAttribute="width" constant="200" id="i2i-Q9-RiO"/>
-                                                <constraint firstAttribute="height" constant="200" id="kuN-9u-B2g"/>
+                                                <constraint firstAttribute="width" constant="100" id="i2i-Q9-RiO"/>
+                                                <constraint firstAttribute="height" constant="100" id="kuN-9u-B2g"/>
                                                 <constraint firstAttribute="height" constant="65" id="yqL-xu-zkE"/>
                                             </constraints>
                                             <variation key="default">
@@ -1067,8 +1067,8 @@
         <image name="Video" width="30" height="30"/>
     </resources>
     <inferredMetricsTieBreakers>
+        <segue reference="XRT-4w-L0S"/>
         <segue reference="Iwy-TH-KYT"/>
-        <segue reference="yeg-8I-aPr"/>
         <segue reference="Xk9-pa-bWO"/>
     </inferredMetricsTieBreakers>
 </document>
