--- a/dvach-browser/Base.lproj/Main.storyboard
+++ b/dvach-browser/Base.lproj/Main.storyboard
@@ -618,6 +618,11 @@
                         </connections>
                     </tableView>
                     <toolbarItems>
+                        <barButtonItem image="Bottompage" id="lMc-P3-Z0E">
+                            <connections>
+                                <action selector="scrollToBottom:" destination="3hz-5v-Niv" id="asC-QQ-psR"/>
+                            </connections>
+                        </barButtonItem>
                         <barButtonItem style="plain" systemItem="flexibleSpace" id="EJM-0B-k22"/>
                         <barButtonItem systemItem="refresh" id="OC5-6d-88W">
                             <connections>
@@ -661,7 +666,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ekp-o7-QBh">
-                                <rect key="frame" x="0.0" y="64" width="320" height="486"/>
+                                <rect key="frame" x="0.0" y="20" width="320" height="530"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RLY-YJ-MBR" userLabel="Container For Post Elements" customClass="DVBContainerForPostElements">
                                         <rect key="frame" x="0.0" y="0.0" width="320" height="706"/>
@@ -1069,6 +1074,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="Bottompage" width="22" height="22"/>
         <image name="Refresh" width="44" height="44"/>
         <image name="Settings" width="22" height="22"/>
         <image name="Video" width="30" height="30"/>
