Fix Shake to Undo issue and Fix text size in Create Post controller. Fixes #96

--- a/dvach-browser/Base.lproj/Main.storyboard
+++ b/dvach-browser/Base.lproj/Main.storyboard
@@ -1080,8 +1080,8 @@
         <image name="Video" width="30" height="30"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="XRT-4w-L0S"/>
         <segue reference="Iwy-TH-KYT"/>
-        <segue reference="Xk9-pa-bWO"/>
+        <segue reference="XRT-4w-L0S"/>
+        <segue reference="o55-Sb-BOJ"/>
     </inferredMetricsTieBreakers>
 </document>
