Different way to perform report action in thread

--- a/dvach-browser/Base.lproj/Main.storyboard
+++ b/dvach-browser/Base.lproj/Main.storyboard
@@ -658,6 +658,7 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </refreshControl>
                     <connections>
+                        <outlet property="shareButton" destination="NrN-BE-Zun" id="dn8-rW-RjN"/>
                         <segue destination="wgF-au-dzt" kind="presentation" identifier="segueToNewPostiOS7" id="yeg-8I-aPr"/>
                     </connections>
                 </tableViewController>
